--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -17671,6 +17671,10 @@ storagedrawers {
     B:compDrawersSort=false
     B:controller=false
     B:controllerSlave=false
+    B:framingTable=false
+    B:fullCustom1=false
+    B:fullCustom2=false
+    B:fullCustom4=false
     B:fullDrawers1=false
     B:fullDrawers1.1=false
     B:fullDrawers1.2=false
@@ -17707,6 +17711,8 @@ storagedrawers {
     B:fullDrawersSort4.3=false
     B:fullDrawersSort4.4=false
     B:fullDrawersSort4.5=false
+    B:halfCustom2=false
+    B:halfCustom4=false
     B:halfDrawers2=false
     B:halfDrawers2.1=false
     B:halfDrawers2.2=false
