--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -46,10 +46,10 @@ general {
     B:"Disable Spaceship Particles"=false
 
     # If true, this will move the Oxygen Indicator to the left side. You can combine this with "Minimap Bottom"
-    B:"Minimap Left"=false
+    B:"Minimap Left"=true
 
     # If true, this will move the Oxygen Indicator to the bottom. You can combine this with "Minimap Left"
-    B:"Minimap Bottom"=false
+    B:"Minimap Bottom"=true
 
     # Increasing this will increase amount of oil that will generate in each chunk.
     D:"Oil Generation Factor"=1.8
@@ -96,21 +96,22 @@ general {
 
     # Enter IDs of other mods' ores here for Galacticraft to generate them on the Moon and other planets. Format is BlockName or BlockName:metadata. Use optional parameters at end of each line: /RARE /UNCOMMON or /COMMON for rarity in a chunk; /DEEP /SHALLOW or /BOTH for height; /SINGLE /STANDARD or /LARGE for clump size; /XTRARANDOM for ores sometimes there sometimes not at all.  /ONLYMOON or /ONLYMARS if wanted on one planet only.  If nothing specified, defaults are /COMMON, /BOTH and /STANDARD.  Repeat lines to generate a huge quantity of ores.
     S:"Other mods ores for GC to generate on the Moon and planets" <
-        ReactorCraft:reactorcraft_block_ore:1 /UNCOMMON /DEEP /STANDARD
-        ReactorCraft:reactorcraft_block_ore:2 /UNCOMMON /DEEP /STANDARD
-        ReactorCraft:reactorcraft_block_ore:3 /UNCOMMON /DEEP /STANDARD
-        ReactorCraft:reactorcraft_block_ore:4 /UNCOMMON /DEEP /STANDARD
-        ReactorCraft:reactorcraft_block_ore:7 /UNCOMMON /BOTH /LARGE
-        ReactorCraft:reactorcraft_block_ore:8 /COMMON /BOTH /LARGE
-        ReactorCraft:reactorcraft_block_ore:8 /COMMON /ONLYMOON /LARGE
-        ReactorCraft:reactorcraft_block_fluoriteore:0 /COMMON /BOTH /STANDARD
-        ReactorCraft:reactorcraft_block_fluoriteore:1 /COMMON /BOTH /STANDARD
-        ReactorCraft:reactorcraft_block_fluoriteore:2 /COMMON /BOTH /STANDARD
-        ReactorCraft:reactorcraft_block_fluoriteore:3 /COMMON /BOTH /STANDARD
-        ReactorCraft:reactorcraft_block_fluoriteore:4 /COMMON /BOTH /STANDARD
-        ReactorCraft:reactorcraft_block_fluoriteore:5 /COMMON /BOTH /STANDARD
-        ReactorCraft:reactorcraft_block_fluoriteore:6 /COMMON /BOTH /STANDARD
-        ReactorCraft:reactorcraft_block_fluoriteore:7 /COMMON /BOTH /STANDARD
+        mo:dilithium_ore /RARE /DEEP /STANDARD
+        mo:tritanium_ore /UNCOMMON /SHALLOW /STANDARD /XTRARANDOM
+        ReactorCraft:reactorcraft_block_ore:1 /RARE /DEEP /STANDARD
+        ReactorCraft:reactorcraft_block_ore:2 /RARE /DEEP /STANDARD
+        ReactorCraft:reactorcraft_block_ore:3 /RARE /DEEP /STANDARD
+        ReactorCraft:reactorcraft_block_ore:4 /RARE /DEEP /STANDARD
+        ReactorCraft:reactorcraft_block_ore:7 /RARE /BOTH /LARGE
+        ReactorCraft:reactorcraft_block_ore:8 /UNCOMMON /BOTH /LARGE
+        ReactorCraft:reactorcraft_block_fluoriteore:0 /UNCOMMON /BOTH /STANDARD
+        ReactorCraft:reactorcraft_block_fluoriteore:1 /UNCOMMON /BOTH /STANDARD
+        ReactorCraft:reactorcraft_block_fluoriteore:2 /UNCOMMON /BOTH /STANDARD
+        ReactorCraft:reactorcraft_block_fluoriteore:3 /UNCOMMON /BOTH /STANDARD
+        ReactorCraft:reactorcraft_block_fluoriteore:4 /UNCOMMON /BOTH /STANDARD
+        ReactorCraft:reactorcraft_block_fluoriteore:5 /UNCOMMON /BOTH /STANDARD
+        ReactorCraft:reactorcraft_block_fluoriteore:6 /UNCOMMON /BOTH /STANDARD
+        ReactorCraft:reactorcraft_block_fluoriteore:7 /UNCOMMON /BOTH /STANDARD
      >
 
     # Set to true to make Galacticraft oil register as oilgc, for backwards compatibility with previously generated worlds.
