--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -10,6 +10,12 @@ general {
     # Enchantment ID for the Pulverizer enchantment. [range: 64 ~ 255, default: 81]
     I:PulverizerEnchantmentID=81
 
+    # Enables debug messages [default: false]
+    B:ShowFlowerDebug=false
+
+    # Enchantment ID for the Vein Cracker enchantment. [range: 64 ~ 255, default: 82]
+    I:VeinCrackerEnchantmentID=82
+
     # Toggle to enable/disable asthetic water placement. [default: true]
     B:sluicePlacesWaterSource=false
 
@@ -51,28 +57,6 @@ milling {
 ores {
     # These settings should be auto-detected during worldgen and act as an override.
     # 0 will prevent flowers, 2 will enforce (set automatically), 1 is default. [range: 0 ~ 2, default: 1]
-<<<<<<< HEAD
-    I:OreExists...=2
-    I:OreExistsAluminum=2
-
-    #  [range: 0 ~ 2, default: 1]
-    I:OreExistsCadmium=2
-    I:OreExistsCopper=2
-
-    #  [range: 0 ~ 2, default: 1]
-    I:OreExistsFlourite=2
-    I:OreExistsLead=2
-    I:OreExistsNickel=2
-
-    #  [range: 0 ~ 2, default: 1]
-    I:OreExistsOsmium=0
-    I:OreExistsSilver=2
-
-    #  [range: 0 ~ 2, default: 1]
-    I:OreExistsThorium=2
-    I:OreExistsTin=2
-    I:OreExistsUranium=2
-=======
     I:OreExists...=0
 
     #  [range: 0 ~ 2, default: 1]
@@ -107,7 +91,6 @@ ores {
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsUranium=0
->>>>>>> 3be12ed... Updating ore generation
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsZinc=0
@@ -140,7 +123,7 @@ sluice {
     B:enableSluice=true
 
     # Set to true to allow dirt to be used in the sluice.  Dirt acts like sand. [default: false]
-    B:sluiceAllowsDirt=false
+    B:sluiceAllowsDirt=true
 
     # Time it takes for the sluice to make 1 operation.  This value is multiplied by 75 ticks. [range: 1 ~ 20, default: 2]
     I:sluiceCycleTime=2
