--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -34,6 +34,10 @@ aurora {
 ##########################################################################################################
 
 biomes {
+    # Biome alias list [default: ]
+    S:"Biome Alias" <
+     >
+
     # Configuration files for configuring Biome Registry [default: ]
     S:"Config Files" <
      >
