--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -62,6 +62,9 @@
 
 
 "enchantment ids" {
+    I:"Aggro Mask ID"=92
+    I:"Ender Lock ID"=91
+    I:"Use Repair ID"=93
     I:"Weapon AOE ID"=90
 }
 
