--- a/config/ImmersiveEngineering.cfg
+++ b/config/ImmersiveEngineering.cfg
@@ -281,7 +281,7 @@ machines {
     I:"Fluid Pump: Consumed"=250
 
     # Set this to false to disable the fluid pump being able to draw infinite water from sources
-    B:"Fluid Pump: Infinite Water"=true
+    B:"Fluid Pump: Infinite Water"=false
 
     # The RF per tick consumed to add one heat to a furnace. Creates up to 4 heat in the startup time and then 1 heat per tick to keep it running
     I:"Heater: RF per Heat"=8
