--- a/config/RTG/rtg.cfg
+++ b/config/RTG/rtg.cfg
@@ -130,25 +130,25 @@ mineshafts {
 
 "ore gen" {
     #  [default: true]
-    B:"Generate Coal Ore"=true
+    B:"Generate Coal Ore"=false
 
     #  [default: true]
-    B:"Generate Diamond Ore"=true
+    B:"Generate Diamond Ore"=false
 
     #  [default: true]
-    B:"Generate Emerald Ore"=true
+    B:"Generate Emerald Ore"=false
 
     #  [default: true]
-    B:"Generate Gold Ore"=true
+    B:"Generate Gold Ore"=false
 
     #  [default: true]
-    B:"Generate Iron Ore"=true
+    B:"Generate Iron Ore"=false
 
     #  [default: true]
-    B:"Generate Lapis Lazuli Ore"=true
+    B:"Generate Lapis Lazuli Ore"=false
 
     #  [default: true]
-    B:"Generate Redstone Ore"=true
+    B:"Generate Redstone Ore"=false
 }
 
 
