--- a/config/enviromine/profiles/default/CustomProperties/thaumcraft.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/thaumcraft.cfg
@@ -1,21 +1,11 @@
 # Configuration file
 
-##########################################################################################################
-# biomes
-#--------------------------------------------------------------------------------------------------------#
-# Manually change the environmental properties of each biome
-##########################################################################################################
-
 biomes {
 
     "Tainted Land" {
         I:"01.Biome ID"=192
         B:"02.Allow Config Override"=false
-
-        # Water Quality: dirty, salty, cold, clean
         S:"03.Water Quality"=dirty
-
-        # Biome temperature in celsius (Player body temp is offset by + 12C)
         D:"04.Ambient Temperature"=10.50504210183448
         D:"05.Temp Rate"=0.0
         D:"06.Sanity Rate"=0.0
@@ -26,11 +16,7 @@ biomes {
     "Magical Forest" {
         I:"01.Biome ID"=193
         B:"02.Allow Config Override"=false
-
-        # Water Quality: dirty, salty, cold, clean
         S:"03.Water Quality"=dirty
-
-        # Biome temperature in celsius (Player body temp is offset by + 12C)
         D:"04.Ambient Temperature"=17.22075445642904
         D:"05.Temp Rate"=0.0
         D:"06.Sanity Rate"=0.0
@@ -41,11 +27,7 @@ biomes {
     Eerie {
         I:"01.Biome ID"=194
         B:"02.Allow Config Override"=false
-
-        # Water Quality: dirty, salty, cold, clean
         S:"03.Water Quality"=dirty
-
-        # Biome temperature in celsius (Player body temp is offset by + 12C)
         D:"04.Ambient Temperature"=10.50504210183448
         D:"05.Temp Rate"=0.0
         D:"06.Sanity Rate"=0.0
@@ -56,11 +38,7 @@ biomes {
     Eldritch {
         I:"01.Biome ID"=195
         B:"02.Allow Config Override"=false
-
-        # Water Quality: dirty, salty, cold, clean
         S:"03.Water Quality"=clean
-
-        # Biome temperature in celsius (Player body temp is offset by + 12C)
         D:"04.Ambient Temperature"=0.0
         D:"05.Temp Rate"=0.0
         D:"06.Sanity Rate"=0.0
@@ -70,12 +48,6 @@ biomes {
 
 }
 
-
-##########################################################################################################
-# blocks
-#--------------------------------------------------------------------------------------------------------#
-# Customise the physical properties and environmental effects of blocks
-##########################################################################################################
 
 blocks {
 
@@ -89,7 +61,22 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=none
+        S:10.Stability=glowstone
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockJar_blockJar {
+        S:01.Name=Thaumcraft:blockJar
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=glowstone
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
@@ -97,35 +84,21 @@ blocks {
 }
 
 
-##########################################################################################################
-# spoiling
-#--------------------------------------------------------------------------------------------------------#
-# Set the properties of spoliable items
-##########################################################################################################
-
 spoiling {
 
     item_ItemManaBean_ItemManaBean {
         S:01.ID=Thaumcraft:ItemManaBean
         I:02.Damage=-1
-
-        # Set blank to rot into nothing
         S:"03.Rotten ID"=Thaumcraft:ItemManaBean
         I:"04.Rotten Damage"=-1
-
-        # Set this to -1 to disable rotting on this item
         I:"05.Days To Rot"=-1
     }
 
     item_ItemZombieBrain_ItemZombieBrain {
         S:01.ID=Thaumcraft:ItemZombieBrain
         I:02.Damage=-1
-
-        # Set blank to rot into nothing
         S:"03.Rotten ID"=Thaumcraft:ItemZombieBrain
         I:"04.Rotten Damage"=-1
-
-        # Set this to -1 to disable rotting on this item
         I:"05.Days To Rot"=-1
     }
 
