Bunches of fixes

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -6394,6 +6394,7 @@ galaxyspace {
     B:ceresmachine=false
     B:ceresmeteoricironore=true
     B:ceressubgrunt=true
+    B:ceresweb=false
     B:decolead=true
     B:decoratecopperblock=true
     B:deimosgrunt=true
@@ -6409,6 +6410,7 @@ galaxyspace {
     B:europageyser=true
     B:europagrunt=true
     B:europaice=true
+    B:europaunderwatergeyser=true
     B:ganymedegrunt=true
     B:ganymedemagnesiumore=true
     B:ganymedesubgrunt=true
@@ -6419,9 +6421,11 @@ galaxyspace {
     B:ioash=true
     B:iobricks=true
     B:iocopperore=true
+    B:iodualstone=true
     B:ioglowstone=true
     B:iogrunt=true
     B:iostone=true
+    B:ioweb=false
     B:iowolframiumore=true
     B:leadore=true
     B:makemakegrunt=true
