--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -455,6 +455,12 @@ shedding {
     I:GalacticraftCore.Crawler.metadata=0
     I:GalacticraftCore.Crawler.rate=-1
 
+    # Configuration of Shedding for GalacticraftCore.EvolvedBlaze
+    S:GalacticraftCore.EvolvedBlaze.item=
+    I:GalacticraftCore.EvolvedBlaze.lexiconDisplaySize=40
+    I:GalacticraftCore.EvolvedBlaze.metadata=0
+    I:GalacticraftCore.EvolvedBlaze.rate=-1
+
     # Configuration of Shedding for GalacticraftCore.EvolvedBossBlaze
     S:GalacticraftCore.EvolvedBossBlaze.item=
     I:GalacticraftCore.EvolvedBossBlaze.lexiconDisplaySize=40
