--- a/config/ImmersiveEngineering.cfg
+++ b/config/ImmersiveEngineering.cfg
@@ -416,8 +416,15 @@ tools {
     # The mb of fluid the Chemical Thrower will consume per tick of usage
     I:"ChemThrower: Consumed"=10
 
+    # Using their fluid registry names, fluids can be specified here that won't be allowed in the jerrycan
+    S:"Jerrycan Blacklist" <
+     >
+
     # The base amount of RF consumed per shot by the Railgun
     I:"Railgun: Consumed"=800
+
+    # When something is hurt by a railgun, the default damage for the used projectile is multiplied by this value
+    D:"Railgun: Damage multiplier"=1.0
 }
 
 
