--- a/config/climatecontrol.cfg
+++ b/config/climatecontrol.cfg
@@ -119,6 +119,21 @@
 ##########################################################################################################
 
 "ocean control parameters" {
+    # frequency of large continent seeds, about 8000x16000
+    I:"Incidence of Continents,Large"=0
+
+    # frequency of medium continent seeds, about 4000x8000
+    I:"Incidence of Continents,Medium"=30
+
+    # frequency of small continent seeds, about 2000x4000
+    I:"Incidence of Continents,Small"=80
+
+    # frequency of large island seeds, about 500x1000
+    I:"Incidence of Islands,Large"=60
+
+    # frequency of medium island seeds, about 250x500, but they tend to break up into archipelagos
+    I:"Incidence of Islands,Medium"=40
+
     # True mostly stops landmasses merging.With default settings you will get an oceanic world if true and a continental world if false
     B:SeparateLandmasses=false
 }
