--- a/config/etfuturum.cfg
+++ b/config/etfuturum.cfg
@@ -11,7 +11,7 @@ general {
     B:"Brewing Stands"=true
     B:"Chorus Fruit (and related blocks)"=true
     B:"Coarse Dirt"=true
-    B:"Colourful Beacon Beams"=true
+    B:"Colourful Beacon Beams"=false
     B:"Crying Obsidian"=true
     B:"Dead Bushes drop sticks"=true
     B:Doors=true
