--- a/config/GalaxySpace/core.conf
+++ b/config/GalaxySpace/core.conf
@@ -1,8 +1,8 @@
 # Configuration file
 
 general {
-    # Enable/Disable new recipes rocket (Tier 1-3).
-    B:"New Recipes Rocket"=true
+    # Enable/Disable advanced recipes rocket (Tier 1-8).
+    B:"Advanced Recipes Rocket"=true
 
     # Enable/Disable Check Version.
     B:enableCheckVersion=false
@@ -28,6 +28,7 @@ general {
     #  /ONLYMOON or /ONLYMARS, /ONLYPHOBOS, /ONLYDEIMOS, /ONLYEUROPA, /ONLYIO, /ONLYENCELADUS, /ONLYVENUS, /ONLYMERCURY, /ONLYCERES if wanted on one planet only.
     S:"Other mods ores for GC to generate on GS planets" <
      >
+    B:"New Recipes Rocket"=true
     B:enableHolidayMessage=false
 }
 
