--- a/config/GalaxySpace/dimensions.conf
+++ b/config/GalaxySpace/dimensions.conf
@@ -39,12 +39,9 @@ dimensions {
 
     # Dimension ID for Jupiter
     I:dimensionIDJupiter=-5027
-
-    # Dimension ID for Jupiter Space Station
     I:dimensionIDJupiterOrbit=-5028
-
-    # Dimension ID for Static Jupiter Space Stations
     I:dimensionIDJupiterOrbitStatic=-5029
+
     # Dimension ID for Kuiper Belt
     I:dimensionIDKuiperBelt=-5012
 
@@ -80,6 +77,12 @@ dimensions {
 
     # Dimension ID for Venus
     I:dimensionIDVenus=-5023
+
+    # Dimension ID for Venus Space Station
+    I:dimensionIDVenusOrbit=-43
+
+    # Dimension ID for Static Venus Space Stations
+    I:dimensionIDVenusOrbitStatic=-42
 }
 
 
@@ -138,8 +141,9 @@ general {
     # Enable/Disable Mars Space Station
     B:enableMarsSS=true
 
-    # Enable/Disable Jupiter Space Station
-    B:enableJupiterSS=true
+    # Enable/Disable Venus Space Station
+    B:enableVenusSS=true
+
     # Enable/Disable Unreachable Planets/Moons
     B:enableUnreachable=true
 
@@ -154,6 +158,7 @@ general {
 
     # Enable/Disable Barnarda F
     B:enableBarnardaF=true
+    B:enableJupiterSS=true
 }
 
 
