--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -7,17 +7,17 @@
 ##########################################################################################################
 
 aurora {
-    # Animate Aurora so it waves [default: true]
-    B:Animate=true
-
     # Whether to enable Aurora processing on server/client [default: true]
     B:Enabled=true
 
-    # true to keep the aurora at a height above player; false to fix it to an altitude [default: true]
-    B:"Height Player Relative"=true
+    # Animate Aurora so it waves [default: true]
+    B:Animate=true
 
     # Allow Auroras with multiple bands [default: true]
     B:"Multiple Bands"=true
+
+    # true to keep the aurora at a height above player; false to fix it to an altitude [default: true]
+    B:"Height Player Relative"=true
 
     # Number of blocks to say fixed above player if Aurora is player relative [range: 16.0 ~ 2048.0, default: 64.0]
     S:"Player Fixed Height"=64.0
@@ -34,12 +34,12 @@ aurora {
 ##########################################################################################################
 
 biomes {
-    # Biome alias list [default: ]
-    S:"Biome Alias" <
-     >
-
     # Configuration files for configuring Biome Registry [default: ]
     S:"Config Files" <
+     >
+
+    # Biome alias list [default: ]
+    S:"Biome Alias" <
      >
 }
 
@@ -77,17 +77,17 @@ dimensions {
 ##########################################################################################################
 
 fog {
-    # Enable biome specific fog density and color [default: true]
-    B:"Biome Fog"=true
-
-    # Visibility factor to apply to biome fog (higher is thicker) [range: 0.0 ~ 5.0, default: 1.0]
-    S:"Biome Fog Factor"=0.3
-
     # Allow desert fog when raining [default: true]
     B:"Desert Fog"=true
 
     # Visibility factor to apply to desert fog (higher is thicker) [range: 0.0 ~ 5.0, default: 1.0]
     S:"Desert Fog Factor"=0.3
+
+    # Enable biome specific fog density and color [default: true]
+    B:"Biome Fog"=true
+
+    # Visibility factor to apply to biome fog (higher is thicker) [range: 0.0 ~ 5.0, default: 1.0]
+    S:"Biome Fog Factor"=0.3
 
     # Higher the player elevation the more haze that is experienced [default: true]
     B:"Elevation Haze"=true
@@ -104,29 +104,21 @@ fog {
 ##########################################################################################################
 
 general {
-    # Default maximum rain strength for a dimension [range: 0.0 ~ 1.0, default: 1.0]
-    S:"Default Maximum Rain Strength"=1.0
-
-    # Default minimum rain strength for a dimension [range: 0.0 ~ 1.0, default: 0.0]
-    S:"Default Minimum Rain Strength"=0.0
-
     # Adjust cloud graphics based on configured cloud height [default: true]
     B:"Fancy Cloud Handling"=true
 
     # Block radius/range around player for special effect application [range: 16 ~ 32, default: 16]
     I:"Special Effect Range"=16
+
+    # Default minimum rain strength for a dimension [range: 0.0 ~ 1.0, default: 0.0]
+    S:"Default Minimum Rain Strength"=0.0
+
+    # Default maximum rain strength for a dimension [range: 0.0 ~ 1.0, default: 1.0]
+    S:"Default Maximum Rain Strength"=1.0
 }
 
 
 jets {
-    I:"Bubblejet Spawn Chance"=1800
-    B:"Bubblejets Enabled"=true
-    I:"Dustjets Chance"=500
-    B:"Dustjets Enabled"=true
-    I:"Firejet Spawn Chance"=1800
-    B:"Firejets Enabled"=true
-    B:"Steamjets Enabled"=true
-    I:"Streamjets Chance"=10
 }
 
 
@@ -137,11 +129,11 @@ jets {
 ##########################################################################################################
 
 logging {
-    # Enables/disables debug logging of the mod [default: false]
-    B:"Enable Debug Logging"=false
-
     # Enables/disables online version checking [default: true]
     B:"Enable Online Version Check"=false
+
+    # Enables/disables debug logging of the mod [default: false]
+    B:"Enable Debug Logging"=false
 }
 
 
@@ -152,11 +144,17 @@ logging {
 ##########################################################################################################
 
 player {
+    # Suppress player's potion particles from rendering [default: false]
+    B:"Suppress Potion Particles"=false
+
     # Controls display of damage pop-offs when an entity is damaged [default: true]
     B:"Damage Popoffs"=true
 
-    # Suppress player's potion particles from rendering [default: false]
-    B:"Suppress Potion Particles"=false
+    # Amount of health bar remaining to trigger player hurt sound [range: 0 ~ 10, default: 8]
+    I:"Hurt Threshold"=8
+
+    # Amount of food bar remaining to trigger player hunger sound [range: 0 ~ 10, default: 8]
+    I:"Hunger Threshold"=8
 
     ##########################################################################################################
     # potion hud
@@ -165,20 +163,20 @@ player {
     ##########################################################################################################
 
     "potion hud" {
-        # Size scale of icons (lower is smaller) [range: 0.0 ~ 1.0, default: 0.5]
-        S:"Display Scale"=0.5
-
         # Enable display of potion icons in display [default: true]
         B:Enable=false
 
-        # Offset from left side of screen [range: 0 ~ 2147483647, default: 5]
-        I:"Left Offset"=25
+        # Transparency factor for icons (higher more solid) [range: 0.0 ~ 1.0, default: 0.5]
+        S:Transparency=0.5
+
+        # Size scale of icons (lower is smaller) [range: 0.0 ~ 1.0, default: 0.5]
+        S:"Display Scale"=0.5
 
         # Offset from top of screen [range: 0 ~ 2147483647, default: 5]
         I:"Top Offset"=25
 
-        # Transparency factor for icons (higher more solid) [range: 0.0 ~ 1.0, default: 0.5]
-        S:Transparency=0.5
+        # Offset from left side of screen [range: 0 ~ 2147483647, default: 5]
+        I:"Left Offset"=25
     }
 
 }
@@ -191,15 +189,17 @@ player {
 ##########################################################################################################
 
 rain {
-    # Always override Vanilla rain sound even when dimension is blacklisted [default: true]
-    B:"Always Override Sound"=true
-    B:"Desert Dust"=true
+    # Factor to apply to rain sound level to adjust [range: 0.0 ~ 1.0, default: 1.0]
+    S:"Sound Level"=0.8
 
     # Reset rain/thunder when all players sleep [default: true]
     B:"Reset Rain on Sleep"=false
 
-    # Factor to apply to rain sound level to adjust [range: 0.0 ~ 1.0, default: 1.0]
-    S:"Sound Level"=0.8
+    # Always override Vanilla rain sound even when dimension is blacklisted [default: true]
+    B:"Always Override Sound"=true
+
+    # Base count of rain splash particles to generate per tick [range: 0 ~ 500, default: 100]
+    I:"Particle Count Base"=100
 }
 
 
@@ -210,30 +210,11 @@ rain {
 ##########################################################################################################
 
 sound {
-    # Automatically configure sound channels [default: true]
-    B:"Autoconfigure Channels"=true
-
-    # Sounds to block from playing [default: ]
-    S:"Blocked Sounds" <
-     >
-
-    # Enable sound when bow is pulled [default: true]
-    B:"Bow Pull Sound"=true
-
-    # Enable sound when item crafted [default: true]
-    B:"Crafting Sound"=true
-
-    # Sounds to cull from frequent playing [default: [^minecraft:liquid.*], [minecraft:mob.sheep.say], [minecraft:mob.chicken.say], [minecraft:mob.cow.say], [minecraft:mob.pig.say]]
-    S:"Culled Sounds" <
-        ^minecraft:liquid.*
-        minecraft:mob.sheep.say
-        minecraft:mob.chicken.say
-        minecraft:mob.cow.say
-        minecraft:mob.pig.say
-     >
-
     # Enable biome background and spot sounds [default: true]
     B:"Enable Biome Sounds"=true
+
+    # Master sound scale factor for biome and block sounds [range: 0.0 ~ 1.0, default: 0.5]
+    S:"Master Sound Scale Factor"=0.4
 
     # Enable footstep sounds [default: true]
     B:Footsteps=true
@@ -244,8 +225,17 @@ sound {
     # Enable sound effect when jumping [default: true]
     B:"Jump Sound"=true
 
-    # Master sound scale factor for biome and block sounds [range: 0.0 ~ 1.0, default: 0.5]
-    S:"Master Sound Scale Factor"=0.4
+    # Enable weapons swing sound effect when attacking [default: true]
+    B:"Swing Sound"=true
+
+    # Enable sound when item crafted [default: true]
+    B:"Crafting Sound"=true
+
+    # Enable sound when bow is pulled [default: true]
+    B:"Bow Pull Sound"=true
+
+    # Automatically configure sound channels [default: true]
+    B:"Autoconfigure Channels"=true
 
     # Number of normal sound channels to configure in the sound system (manual) [range: 28 ~ 2147483647, default: 28]
     I:"Number Normal Channels"=28
@@ -253,34 +243,32 @@ sound {
     # Number of streaming sound channels to configure in the sound system (manual) [range: 4 ~ 2147483647, default: 4]
     I:"Number Streaming Channels"=4
 
+    # Sounds to block from playing [default: ]
+    S:"Blocked Sounds" <
+     >
+
     # Ticks between culled sound events (0 to disable culling) [range: 0 ~ 2147483647, default: 20]
     I:"Sound Culling Threshold"=20
 
-    # Enable weapons swing sound effect when attacking [default: true]
-    B:"Swing Sound"=true
+    # Sounds to cull from frequent playing [default: [^minecraft:liquid.*], [minecraft:mob.sheep.say], [minecraft:mob.chicken.say], [minecraft:mob.cow.say], [minecraft:mob.pig.say]]
+    S:"Culled Sounds" <
+        ^minecraft:liquid.*
+        minecraft:mob.sheep.say
+        minecraft:mob.chicken.say
+        minecraft:mob.cow.say
+        minecraft:mob.pig.say
+     >
 
     "ice cracking" {
-        I:Chance=10000
-        B:Enabled=true
-        S:"Scaling Factor"=1.0
     }
 
     "frog croaks" {
-        I:Chance=25
-        B:Enabled=true
-        S:"Scaling Factor"=1.0
     }
 
     "redstone ore" {
-        I:Chance=100
-        B:Enabled=true
-        S:"Scaling Factor"=1.0
     }
 
     "soul sand" {
-        I:Chance=8000
-        B:Enabled=true
-        S:"Scaling Factor"=1.0
     }
 
 }
