Massive fixes to gravity

--- a/config/enviromine/profiles/default/CustomProperties/ElectriCraft.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/ElectriCraft.cfg
@@ -8,8 +8,8 @@
 
 blocks {
 
-    tile_item_placer_electricraft_item_placer {
-        S:01.Name=ElectriCraft:electricraft_item_placer
+    "ElectriCraft:electricraft_block_battery" {
+        S:01.Name=ElectriCraft:electricraft_block_battery
         I:02.MetaID=-1
         S:03.DropName=
         I:04.DropMetaID=-1
@@ -18,7 +18,97 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=strong
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ElectriCraft:electricraft_block_cable" {
+        S:01.Name=ElectriCraft:electricraft_block_cable
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ElectriCraft:electricraft_block_eusplit" {
+        S:01.Name=ElectriCraft:electricraft_block_eusplit
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ElectriCraft:electricraft_block_machine" {
+        S:01.Name=ElectriCraft:electricraft_block_machine
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ElectriCraft:electricraft_block_ore" {
+        S:01.Name=ElectriCraft:electricraft_block_ore
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=average
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ElectriCraft:electricraft_block_rfbattery" {
+        S:01.Name=ElectriCraft:electricraft_block_rfbattery
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ElectriCraft:electricraft_block_wire" {
+        S:01.Name=ElectriCraft:electricraft_block_wire
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
