--- a/config/enviromine/profiles/default/CustomProperties/ReactorCraft.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/ReactorCraft.cfg
@@ -1,2 +1,298 @@
 # Configuration file
 
+##########################################################################################################
+# blocks
+#--------------------------------------------------------------------------------------------------------#
+# Customise the physical properties and environmental effects of blocks
+##########################################################################################################
+
+blocks {
+
+    "ReactorCraft:reactorcraft_block_coriumflowing" {
+        S:01.Name=ReactorCraft:reactorcraft_block_coriumflowing
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_duct" {
+        S:01.Name=ReactorCraft:reactorcraft_block_duct
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_fluorite" {
+        S:01.Name=ReactorCraft:reactorcraft_block_fluorite
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=average
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_fluoriteore" {
+        S:01.Name=ReactorCraft:reactorcraft_block_fluoriteore
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=average
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_flywheelmulti" {
+        S:01.Name=ReactorCraft:reactorcraft_block_flywheelmulti
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_generatormulti" {
+        S:01.Name=ReactorCraft:reactorcraft_block_generatormulti
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_heatermulti" {
+        S:01.Name=ReactorCraft:reactorcraft_block_heatermulti
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_injectormulti" {
+        S:01.Name=ReactorCraft:reactorcraft_block_injectormulti
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_lamp" {
+        S:01.Name=ReactorCraft:reactorcraft_block_lamp
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=glowstone
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_line" {
+        S:01.Name=ReactorCraft:reactorcraft_block_line
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_machine" {
+        S:01.Name=ReactorCraft:reactorcraft_block_machine
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_mats" {
+        S:01.Name=ReactorCraft:reactorcraft_block_mats
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_modelmachine" {
+        S:01.Name=ReactorCraft:reactorcraft_block_modelmachine
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_modelreactor" {
+        S:01.Name=ReactorCraft:reactorcraft_block_modelreactor
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_ore" {
+        S:01.Name=ReactorCraft:reactorcraft_block_ore
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=average
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_reactor" {
+        S:01.Name=ReactorCraft:reactorcraft_block_reactor
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_solenoidmulti" {
+        S:01.Name=ReactorCraft:reactorcraft_block_solenoidmulti
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_steam" {
+        S:01.Name=ReactorCraft:reactorcraft_block_steam
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "ReactorCraft:reactorcraft_block_turbinemulti" {
+        S:01.Name=ReactorCraft:reactorcraft_block_turbinemulti
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+}
+
+
