--- a/config/enviromine/profiles/default/CustomProperties/GardenCore.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/GardenCore.cfg
@@ -1,2 +1,43 @@
 # Configuration file
 
+##########################################################################################################
+# blocks
+#--------------------------------------------------------------------------------------------------------#
+# Customise the physical properties and environmental effects of blocks
+##########################################################################################################
+
+blocks {
+
+    tile_gardencore_gardenSoil_garden_soil {
+        S:01.Name=GardenCore:garden_soil
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=loose
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_gardencore_gardenFarmland_garden_farmland {
+        S:01.Name=GardenCore:garden_farmland
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=loose
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+}
+
+
