--- a/config/enviromine/profiles/default/CustomProperties/thaumcraft.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/thaumcraft.cfg
@@ -109,6 +109,36 @@ blocks {
         B:"12.Slides When Wet"=false
     }
 
+    "Thaumcraft:BlockJarFilledItem" {
+        S:01.Name=Thaumcraft:BlockJarFilledItem
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=glowstone
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "Thaumcraft:BlockJarNodeItem" {
+        S:01.Name=Thaumcraft:BlockJarNodeItem
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=glowstone
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
 }
 
 
